hyphens for post title on mobile. Fix #147

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2087,6 +2087,7 @@ textarea {
 
 	@media only screen and (max-width: $breakpoint-small) {
 		-webkit-hyphens: auto;
+		hyphens: auto;
 	}
 
 	a {
